tests/src/frontend/syntax/invalid/modifier_type_constant.sk
base class Foo {
  overridable type T = Int;
}
